Added project descriptions

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
     <!-- Project 1 -->
     <div class="project-item">
       <h2>Quantitative Communication Research Project</h2>
-
+      <p>Final project for COM 386: Quantitative Communication Research Methods; I conducted a small-scale content analysis examining how monetization has shaped modern sports media coverage. I developed a coding framework, gathered and categorized digital content, and applied quantitative techniques to identify rhetorical patterns and trends. </p>
       <div class="pdf-row">
         <div class="pdf-block">
           <p>Project Proposal:</p>
@@ -44,6 +44,7 @@
     <!-- Project 2 -->
     <div class="project-item">
       <h2>Social Research Methods Research Proposal</h2>
+      <p>Final project for SOC 300: Social Research Methods; I developed a research proposal investigating the impact of censorship policies in Florida’s public education system, particularly on LGBTQ+ students, parents, and educators. I used a mixed-methods approach, combining content and discourse analysis with a proposed online survey to capture both policy level communication and lived experiences.</p>
       <div class="pdf-row">
         <div class="pdf-block">
           <iframe src="soc300.pdf" class="pdf-preview"></iframe>
@@ -55,6 +56,7 @@
     <!-- Project 3 -->
     <div class="project-item">
       <h2>Media History and Theory Final Paper</h2>
+      <p>Final paper for COM 257: Media History and Theory; I critically analyzed a fictional novel through the lens of neoliberalism and materialist media theory. I examined how audience-driven promotion shaped its meaning over time, reflecting broader cultural and economic structures. I also examined how different media formats shape reader engagement. </p>
       <div class="pdf-row">
         <div class="pdf-block">
           <iframe src="com257.pdf" class="pdf-preview"></iframe>
