--- a/index.html
+++ b/index.html
@@ -3,34 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chris' Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <title>Riley Chapman | Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <div class="container home">
-      <img src="profile-pic.JPG" alt="Photo of Christian Torres" class="profile-photo">
-      <div class="bio">
-        <h1>Welcome to my Personal Portfolio!</h1>
-          <h2>Hello, I'm Christian Torres</h2>
-          <p>
-          I am currently a senior at NC State University graduating in December 2025 pursuing a B.A. in Communications. 
-          I have experience supporting teams and projects in academic, retail, and community settings, where I've built strong skills in customer service, problem-solving, and collaboration. 
-          I also bring creative expertise in digital media studies, audio/video production, and design, which allows me to approach communication from multiple perspectives. 
-          I am passionate about continuously learning and applying my skills to positively impact organizations and society.
-          </p>
-          <a href="mailto:cjtorres@mac.com?subject=Portfolio%20Contact&body=Hello%20Christian," class="cta-btn">Get in Touch</a>
+  <div class="container home">
+    <!-- Left: Profile Photo + Social Icons -->
+    <div class="left-column">
+      <img src="prof-pic.jpeg" alt="Riley Chapman" class="profile-photo">
+
+      <!-- Social Icons -->
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/rileyachapman" target="_blank">
+          <img src="linkedin-logo.png" alt="LinkedIn" class="icon">
+        </a>
+        <a href="https://github.com/rileyac" target="_blank">
+          <img src="github-logo.png" alt="GitHub" class="icon">
+        </a>
       </div>
     </div>
 
-  <nav class="navbar">
-    <div class="nav-left">
-        <a href="https://www.linkedin.com/in/christian-torres-3b3161264/" target="_blank" class="nav-btn linkedin">LinkedIn</a>
-        <a href="resume.html" class="nav-btn">Resume</a>
+    <!-- Right: About + Navigation -->
+    <div class="bio">
+      <h1>Hi, I’m Riley!</h1>
+      <p>
+        I am a senior at UNC Chapel Hill pursuing a B.S. in Computer Science and minors in Social and Economic Justice and Data Science. I am passionate about exploring the intersections between computer science and fields that drive meaningful impact, such as education, enabling technology, and social and economic justice. 
+        <br><br> Along with my ongoing coursework, I have 7 years of customer service experience which has allowed me to develop strong skills in communication, interpersonal relations, management, and problem-solving. I am eager to continue learning new technical skills and exploring opportunities that merge my interests with technology!
+      </p>
+
+      <!-- Navigation Buttons -->
+      <div class="nav-links">
+        <a href="classes.html" class="nav-btn">Classes</a>
         <a href="projects.html" class="nav-btn">Projects</a>
+        <a href="experiences.html" class="nav-btn">Experiences</a>
+      </div>
     </div>
-  </nav>
+  </div>
 
 </body>
 </html>
+
