--- a/projects.html
+++ b/projects.html
@@ -3,68 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chris' Projects</title>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <title>Riley Chapman | Projects</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- Top Navigation Bar -->
-  <nav class="navbar">
-    <div class="nav-left">
-        <a href="https://www.linkedin.com/in/christian-torres" target="_blank" class="nav-btn linkedin">LinkedIn</a>
-        <a href="index.html" class="nav-btn">Home</a>
-        <a href="resume.html" class="nav-btn">Resume</a>
-    </div>
-  </nav>
-
-  <!-- Projects Container -->
-  <div class="container resume">
+  <div class="container">
     <h1 class="section-title">My Projects</h1>
 
-    <!-- Project 1 -->
     <div class="project-item">
-      <h2>Quantitative Communication Research Project</h2>
-      <p>Final project for COM 386: Quantitative Communication Research Methods; I conducted a small-scale content analysis examining how monetization has shaped modern sports media coverage. I developed a coding framework, gathered and categorized digital content, and applied quantitative techniques to identify rhetorical patterns and trends. </p>
-      <div class="pdf-row">
-        <div class="pdf-block">
-          <p>Project Proposal:</p>
-          <iframe src="com386-proposal.pdf" class="pdf-preview"></iframe>
-          <a href="com386-proposal.pdf" download class="cta-btn small-btn">Download PDF</a>
-        </div>
-
-        <div class="pdf-block">
-          <p>Content Analysis Coding:</p>
-          <iframe src="com386.pdf" class="pdf-preview"></iframe>
-          <a href="com386.pdf" download class="cta-btn small-btn">Download PDF</a>
-        </div>
-      </div>
+      <h2>
+        <img src="github-logo.png" alt="GitHub" class="project-icon">
+        <a href="https://github.com/rileyac/csxl-ticket-trail" target="_blank">Ticket Trail</a>
+      </h2>
+      <p><i>Foundations of Software Engineering Project</i> - May 2025</p>
+      <ul>
+        <li>Enhanced UNC's CSXL Office Hours system with an AI-powered tool using <b>OpenAI API integration</b> to suggest similar
+            tickets, helping TAs provide faster, more informed support based on historical ticket data</li>
+        <li>Built <b>RESTful APIs</b> <b>with FastAPI</b> and implemented a <b>PostgreSQL</b> database with <b>SQLAlchemy ORM</b> for robust ticket
+storage and retrieval</li>
+            <li>Developed responsive frontend components using <b>Angular</b> and <b>TypeScript</b> while collaborating in an <b>Agile</b> team of 4</li>
+        </ul>
     </div>
 
-    <!-- Project 2 -->
     <div class="project-item">
-      <h2>Social Research Methods Research Proposal</h2>
-      <p>Final project for SOC 300: Social Research Methods; I developed a research proposal investigating the impact of censorship policies in Florida’s public education system, particularly on LGBTQ+ students, parents, and educators. I used a mixed-methods approach, combining content and discourse analysis with a proposed online survey to capture both policy level communication and lived experiences.</p>
-      <div class="pdf-row">
-        <div class="pdf-block">
-          <iframe src="soc300.pdf" class="pdf-preview"></iframe>
-          <a href="soc300.pdf" download class="cta-btn small-btn">Download PDF</a>
-        </div>
-      </div>
+      <h2>
+        <img src="github-logo.png" alt="GitHub" class="project-icon">
+        <a href="https://github.com/rileyac/akari" target="_blank">Akari</a>
+      </h2>
+      <p><i>Design Patterns Project</i> - December 2024</p>
+      <ul>
+        <li>
+            Programmed a digital logic game in <b>Java</b> with <b>5 unique puzzles</b>, practicing <b>object-oriented</b> design principles
+        </li>
+        <li>
+            Crafted an <b>interactive GUI</b> using JavaFX, ensuring smooth and intuitive user interactions
+        </li>
+        <li>
+            Implemented <b>Model-View-Controller</b> (MVC) architecture to separate concerns and improve code maintainability
+        </li>
+      </ul>
     </div>
 
-    <!-- Project 3 -->
     <div class="project-item">
-      <h2>Media History and Theory Final Paper</h2>
-      <p>Final paper for COM 257: Media History and Theory; I critically analyzed a fictional novel through the lens of neoliberalism and materialist media theory. I examined how audience-driven promotion shaped its meaning over time, reflecting broader cultural and economic structures. I also examined how different media formats shape reader engagement. </p>
-      <div class="pdf-row">
-        <div class="pdf-block">
-          <iframe src="com257.pdf" class="pdf-preview"></iframe>
-          <a href="com257.pdf" download class="cta-btn small-btn">Download PDF</a>
-        </div>
-      </div>
+      <h2>
+        <img src="github-logo.png" alt="GitHub" class="project-icon">
+        <a href="https://github.com/rileyac/" target="_blank">TBD</a>
+      </h2>
+      <p><i>TBD</i> - TBD</p>
+      <ul>
+        <li>
+            TBD
+        </li>
+      </ul>
     </div>
 
+    <div class="back-home">
+      <a href="index.html" class="nav-btn">Back to Home</a>
+    </div>
   </div>
 
 </body>
