--- a/classes.html
+++ b/classes.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+  <!-- Header Navigation -->
+  <header class="site-header">
+    <nav class="nav-bar">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="experiences.html">Experiences</a>
+      <a href="riley-chapman-resume.pdf" target="_blank">Resume</a>
+    </nav>
+  </header>
+
   <div class="container">
     <h1 class="section-title">Relevant Classes & GPA</h1>
     <table class="classes-table">
@@ -19,71 +29,22 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>Modern Web Programming</td>
-          <td>COMP 426</td>
-          <td><i>In Progress</i></td>
-        </tr>
-        <tr>
-          <td>Computer Organization</td>
-          <td>COMP 311</td>
-          <td><i>In Progress</i></td>
-        </tr>
-        <tr>
-          <td>Foundations of Software Engineering</td>
-          <td>COMP 590</td>
-          <td>A</td>
-        </tr>
-        <tr>
-          <td>Algorithms and Analysis</td>
-          <td>COMP 550</td>
-          <td>B+</td>
-        </tr>
-        <tr>
-          <td>Models of Language and Computation</td>
-          <td>COMP 455</td>
-          <td>A-</td>
-        </tr>
-        <tr>
-          <td>Discrete Structures</td>
-          <td>COMP 283</td>
-          <td>A-</td>
-        </tr>
-        <tr>
-          <td>Design Patterns</td>
-          <td>COMP 301</td>
-          <td>A</td>
-        </tr>
-        <tr>
-          <td>Systems Fundamentals</td>
-          <td>COMP 211</td>
-          <td>B+</td>
-        </tr>
-        <tr>
-          <td>Data Structures and Analysis</td>
-          <td>COMP 210</td>
-          <td>A</td>
-        </tr>
-        <tr>
-          <td>Intro to Programming and Data Science</td>
-          <td>COMP 110</td>
-          <td>A</td>
-        </tr>
-        <tr>
-          <td>Artificial Intelligence</td>
-          <td>COMP 560</td>
-          <td>PASS</td>
-        </tr>
+        <tr><td>Modern Web Programming</td><td>COMP 426</td><td><i>In Progress</i></td></tr>
+        <tr><td>Computer Organization</td><td>COMP 311</td><td><i>In Progress</i></td></tr>
+        <tr><td>Foundations of Software Engineering</td><td>COMP 590</td><td>A</td></tr>
+        <tr><td>Algorithms and Analysis</td><td>COMP 550</td><td>B+</td></tr>
+        <tr><td>Models of Language and Computation</td><td>COMP 455</td><td>A-</td></tr>
+        <tr><td>Discrete Structures</td><td>COMP 283</td><td>A-</td></tr>
+        <tr><td>Design Patterns</td><td>COMP 301</td><td>A</td></tr>
+        <tr><td>Systems Fundamentals</td><td>COMP 211</td><td>B+</td></tr>
+        <tr><td>Data Structures and Analysis</td><td>COMP 210</td><td>A</td></tr>
+        <tr><td>Intro to Programming and Data Science</td><td>COMP 110</td><td>A</td></tr>
+        <tr><td>Artificial Intelligence</td><td>COMP 560</td><td>PASS</td></tr>
       </tbody>
     </table>
     
     <p class="gpa">Overall GPA: 3.67 | CS GPA: 3.71</p>
-
-    <div class="back-home">
-      <a href="index.html" class="nav-btn">Back to Home</a>
-    </div>
   </div>
 
 </body>
 </html>
-
