--- a/experiences.html
+++ b/experiences.html
@@ -8,36 +8,107 @@
 </head>
 <body>
 
+  <!-- Header Navigation -->
+  <header class="site-header">
+    <nav class="nav-bar">
+      <a href="index.html">Home</a>
+      <a href="classes.html">Classes</a>
+      <a href="projects.html">Projects</a>
+      <a href="riley-chapman-resume.pdf" target="_blank">Resume</a>
+    </nav>
+  </header>
+
   <div class="container">
     <h1 class="section-title">Relevant Experience</h1>
 
     <div class="project-item">
-      <h2>Software Engineering Intern | Pearson</h2>
-      <p>Built a Salesforce-based Service Assistant and integrated AI-powered features.</p>
+      <div class="project-header">
+        <h2>Pearson</h2>
+        <span class="date">June 2025 - August 2025</span>
+      </div>
+      <p><i>Software Engineering Intern | Customer Relationship Management (CRM) Team</i></p>
+      <ul>
+        <li>Engineered and deployed an AI-powered Service Assistant with Salesforce’s Agentforce to help the CRM team
+        resolve support cases, targeting 2% contribution toward a 10% case resolution time improvement OKR for 2025</li>
+        <li>Streamlined knowledge surfacing through Salesforce Data Libraries and Lightning Components</li>
+        <li>Coordinated cross-functional alignment with 30+ stakeholders by delivering regular progress demos, collecting
+        requirements, and incorporating feedback</li>
+      </ul>
     </div>
 
     <div class="project-item">
-      <h2>Teaching Assistant | Girls Who Code</h2>
-      <p>Mentored students in Python and full-stack development while supporting STEM outreach.</p>
+        <div class="project-header">
+        <h2>Girls Who Code</h2>
+        <span class="date">January 2025 - Present</span>
+      </div>
+      <p><i>Instructor</i></p>
+        <ul>
+        <li>Teach curriculum in Programming Foundations and Web Development to 20+ students in weekly classes</li>
+        <li>Mentor and supervise a team of 8 Teaching Assistants, ensuring effective classroom support and student success</li>
+        <li>Cultivate an inclusive and engaging learning environment, devoting 30+ hours each semester</li>
+      </ul>
     </div>
 
     <div class="project-item">
-      <h2>Customer Service Specialist | Retail</h2>
-      <p>Developed strong communication, problem-solving, and management skills over 7 years.</p>
+        <div class="project-header">
+        <h2>Pearl Hacks</h2>
+        <span class="date">September 2024 - February 2025</span>
+      </div>
+      <p><i>Experience Committee Member</i></p>
+        <ul>
+        <li>Designed and executed two Intro to Python workshops for 30+ participants at a hackathon for gender minorities</li>
+        <li>Collaborated with a committee member to create a beginner-friendly <a href="https://github.com/rileyac/PH25-CYOA" target="_blank">project outline in Python</a>, guiding participants
+        through fundamental programming concepts including loops, variables, and functions</li>
+      </ul>
+      
     </div>
+    
 
     <h1 class="section-title">Other Experience</h1>
 
     <div class="project-item">
-      <h2>Bartaco</h2>
+      <div class="project-header">
+        <h2>Bartaco</h2>
+        <span class="date">August 2023 - Present</span>
+      </div>
       <p><i>Server</i></p>
-      <p>Developed strong communication, problem-solving, and management skills over 7 years.</p>
+      <ul>
+        <li>Orchestrate multi-table service in a fast-paced environment, demonstrating exceptional organization and time
+        management while working 20+ hours a week</li>
+        <li>Foster relationships with diverse clientele through clear communication and an adaptive service approach to
+        handle special requests and changing restaurant demands
+        </li>
+      </ul>
     </div>
 
-    <div class="back-home">
-      <a href="index.html" class="nav-btn">Back to Home</a>
+        <div class="project-item">
+      <div class="project-header">
+        <h2>Chapel Thrill Escapes</h2>
+        <span class="date">April 2023 - Present</span>
+      </div>
+      <p><i>Build Team Member</i></p>
+      <ul>
+        <li>Designed and implemented logic-based puzzles for student-created escape rooms, enhancing problem-solving and critical thinking experiences</li>
+        <li>Collaborated on the design and construction of escape rooms, supporting creativity, entrepreneurship, and teamwork</li>
+      </ul>
     </div>
+
+
+        <div class="project-item">
+      <div class="project-header">
+        <h2>Learn to Be</h2>
+        <span class="date">August 2022 - Present</span>
+      </div>
+      <p><i>Events Chair</i></p>
+      <ul>
+        <li>Tutored a 1st grader in reading and writing twice weekly, supporting academic growth and literacy skills</li>
+        <li>Planned and executed events for 20+ club members, fostering a collaborative and welcoming community</li>
+        <li>Contributed to Learn to Be, a national non-profit providing free online tutoring for K-12 students in under-resourced communities</li>
+      </ul>
+    </div>
+
   </div>
 
 </body>
 </html>
+
