--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+  <!-- Header Navigation -->
+  <header class="site-header">
+    <nav class="nav-bar">
+      <a href="classes.html">Classes</a>
+      <a href="projects.html">Projects</a>
+      <a href="experiences.html">Experiences</a>
+      <a href="riley-chapman-resume.pdf" target="_blank">Resume</a>
+    </nav>
+  </header>
+
   <div class="container home">
     <!-- Left: Profile Photo + Social Icons -->
     <div class="left-column">
@@ -16,10 +26,10 @@
       <!-- Social Icons -->
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/rileyachapman" target="_blank">
-          <img src="linkedin-logo.png" alt="LinkedIn" class="icon">
+          <img src="linkedin-logo.png" alt="Visit Riley's LinkedIn profile" class="icon">
         </a>
         <a href="https://github.com/rileyac" target="_blank">
-          <img src="github-logo.png" alt="GitHub" class="icon">
+          <img src="github-logo.png" alt="Visit Riley's GitHub profile" class="icon">
         </a>
       </div>
     </div>
@@ -31,16 +41,16 @@
         I am a senior at UNC Chapel Hill pursuing a B.S. in Computer Science and minors in Social and Economic Justice and Data Science. I am passionate about exploring the intersections between computer science and fields that drive meaningful impact, such as education, enabling technology, and social and economic justice. 
         <br><br> Along with my ongoing coursework, I have 7 years of customer service experience which has allowed me to develop strong skills in communication, interpersonal relations, management, and problem-solving. I am eager to continue learning new technical skills and exploring opportunities that merge my interests with technology!
       </p>
-
-      <!-- Navigation Buttons -->
-      <div class="nav-links">
-        <a href="classes.html" class="nav-btn">Classes</a>
-        <a href="projects.html" class="nav-btn">Projects</a>
-        <a href="experiences.html" class="nav-btn">Experiences</a>
-      </div>
+          <h1>My Skills</h1>
+      <p>
+        <b>Languages (Ordered by Proficiency):</b> Python, Java, TypeScript, R, SQL<br>
+        <b>Web & Backend Development:</b> HTML, CSS, Angular, FastAPI, RESTful APIs<br>
+        <b>Tools & Technologies:</b> GitHub, Salesforce, Git, Figma, Docker<br>
+        <b>Practices:</b> OOP, Agile/Scrum, API Integration, MVC Architecture
+      </p>
     </div>
   </div>
+  
 
 </body>
 </html>
-
