--- a/projects.html
+++ b/projects.html
@@ -8,58 +8,57 @@
 </head>
 <body>
 
+  <!-- Header Navigation -->
+  <header class="site-header">
+    <nav class="nav-bar">
+      <a href="index.html">Home</a>
+      <a href="classes.html">Classes</a>
+      <a href="experiences.html">Experiences</a>
+      <a href="riley-chapman-resume.pdf" target="_blank">Resume</a>
+    </nav>
+  </header>
+
   <div class="container">
     <h1 class="section-title">My Projects</h1>
 
     <div class="project-item">
-      <h2>
-        <img src="github-logo.png" alt="GitHub" class="project-icon">
-        <a href="https://github.com/rileyac/csxl-ticket-trail" target="_blank">Ticket Trail</a>
-      </h2>
-      <p><i>Foundations of Software Engineering Project</i> - May 2025</p>
+        <div class="project-header">
+        <h2><img src="github-logo.png" alt="GitHub" class="project-icon">
+        <a href="https://github.com/rileyac/csxl-ticket-trail" target="_blank">Ticket Trail</a></h2>
+        <span class="date">May 2025</span>
+      </div>
+      <p><i>Foundations of Software Engineering Project</i></p>
       <ul>
-        <li>Enhanced UNC's CSXL Office Hours system with an AI-powered tool using <b>OpenAI API integration</b> to suggest similar
-            tickets, helping TAs provide faster, more informed support based on historical ticket data</li>
-        <li>Built <b>RESTful APIs</b> <b>with FastAPI</b> and implemented a <b>PostgreSQL</b> database with <b>SQLAlchemy ORM</b> for robust ticket
-storage and retrieval</li>
-            <li>Developed responsive frontend components using <b>Angular</b> and <b>TypeScript</b> while collaborating in an <b>Agile</b> team of 4</li>
-        </ul>
-    </div>
-
-    <div class="project-item">
-      <h2>
-        <img src="github-logo.png" alt="GitHub" class="project-icon">
-        <a href="https://github.com/rileyac/akari" target="_blank">Akari</a>
-      </h2>
-      <p><i>Design Patterns Project</i> - December 2024</p>
-      <ul>
-        <li>
-            Programmed a digital logic game in <b>Java</b> with <b>5 unique puzzles</b>, practicing <b>object-oriented</b> design principles
-        </li>
-        <li>
-            Crafted an <b>interactive GUI</b> using JavaFX, ensuring smooth and intuitive user interactions
-        </li>
-        <li>
-            Implemented <b>Model-View-Controller</b> (MVC) architecture to separate concerns and improve code maintainability
-        </li>
+        <li>Enhanced UNC's CSXL Office Hours system with an AI-powered tool using <b>OpenAI API integration</b> to suggest similar tickets, helping TAs provide faster, more informed support based on historical ticket data</li>
+        <li>Built <b>RESTful APIs</b> with <b>FastAPI</b> and implemented a <b>PostgreSQL</b> database with <b>SQLAlchemy ORM</b> for robust ticket storage and retrieval</li>
+        <li>Developed responsive frontend components using <b>Angular</b> and <b>TypeScript</b> while collaborating in an <b>Agile</b> team of 4</li>
       </ul>
     </div>
 
     <div class="project-item">
-      <h2>
-        <img src="github-logo.png" alt="GitHub" class="project-icon">
-        <a href="https://github.com/rileyac/" target="_blank">TBD</a>
-      </h2>
-      <p><i>TBD</i> - TBD</p>
+        <div class="project-header">
+        <h2><img src="github-logo.png" alt="GitHub" class="project-icon">
+        <a href="https://github.com/rileyac/akari" target="_blank">Akari</a></h2>
+        <span class="date">December 2024</span>
+      </div>
+      <p><i>Design Patterns Project</i></p>
       <ul>
-        <li>
-            TBD
-        </li>
+        <li>Programmed a digital logic game in <b>Java</b> with <b>5 unique puzzles</b>, practicing <b>object-oriented</b> design principles</li>
+        <li>Crafted an <b>interactive GUI</b> using JavaFX, ensuring smooth and intuitive user interactions</li>
+        <li>Implemented <b>Model-View-Controller</b> (MVC) architecture to separate concerns and improve code maintainability</li>
       </ul>
     </div>
 
-    <div class="back-home">
-      <a href="index.html" class="nav-btn">Back to Home</a>
+    <div class="project-item">
+        <div class="project-header">
+        <h2><img src="github-logo.png" alt="GitHub" class="project-icon">
+        <a href="https://github.com/rileyac/" target="_blank">TBD</a></h2>
+        <span class="date">TBD</span>
+      </div>
+      <p><i>TBD</i></p>
+      <ul>
+        <li>TBD</li>
+      </ul>
     </div>
   </div>
 
